# libdealii_trixi

./: build_tarballs.jl
dealii-trixi/: CMakeLists.txt  LICENSE.md
dealii-trixi/include/: intercomm.h  libdealii-trixi.h
dealii-trixi/src/: libdealii.cc
